# gvmp_farm_assistance

./: .gitignore  .travis.yml  CMakeLists.txt  CNAME  README.md  _config.yml  cppan.yml  gvmp_farm_assistance.rc  index.md
include/: globals.hpp  resource.h  timer.hpp  utils.hpp
src/: main.cpp
